v13-argo-rollouts-canary/rolling-update.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rolling-update
spec:
  replicas: 5
  strategy:
    canary:
      maxSurge: 2
      maxUnavailable: 2
  selector:
    matchLabels:
      app: rolling-update
  template:
    metadata:
      labels:
        app: rolling-update
    spec:
      containers:
      - name: rolling-update
        image: argoproj/rollouts-demo:green
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: rolling-update
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: rolling-update
