v13-argo-rollouts-canary/rollouts-setweight.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-setweight
spec:
  replicas: 5
  strategy:
    canary:
      steps:
      - setWeight: 30
      - pause: {}
      # - setWeight: 40
      # - pause: {duration: 10s}
      # - setWeight: 60
      # - pause: {duration: 20s}
      # - setWeight: 80
      # - pause: {duration: 1m}
  selector:
    matchLabels:
      app: rollouts-setweight
  template:
    metadata:
      labels:
        app: rollouts-setweight
    spec:
      containers:
      - name: rollouts-setweight
        image: argoproj/rollouts-demo:green
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-setweight
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: rollouts-setweight
